Trying to make a modal to close the video I'm trying to make a modal to close the video but it seems that broke my code. I used position: relative in a section that wraps the video and a span that contains 'X' content to works as a close button. But, somehow, this section, even I setting top:0, still appearing below of your sibling tag. Tomorrow I'll try to solve this.

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -118,23 +118,33 @@ span {
   z-index: 5;
 }
 
+.trailer-wrapper {
+  display: none;
+  position: relative;
+  top: 0;
+  margin: 0 auto;
+  width: 85vw;
+  height: 85vh;
+}
+
 .trailer {
   visibility: hidden;
   position: absolute;
+  background-color: #000;
   padding: 0;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  
   width: 90vw;
   height: 90vh;
   transition: var(--trailer-transition-time);
 }
 
-.close-btn {
-  width: 10rem;
-  height: 10rem;
+span.close-btn {
+  font-size: 3rem;
   z-index: 10;
   background-color: #fff;
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 
 .fade-in {
